@@ -33,6 +33,7 @@ package de.viadee.bpm.vPAV.config.reader;
 
 import de.viadee.bpm.vPAV.RuntimeConfig;
 import de.viadee.bpm.vPAV.config.model.Rule;
+import de.viadee.bpm.vPAV.config.model.RuleSet;
 import de.viadee.bpm.vPAV.constants.ConfigConstants;
 import org.junit.BeforeClass;
 import org.junit.Test;
@@ -43,42 +44,58 @@ import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.Map;
 
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.*;
 
 public class XmlConfigReaderTest {
 
-    private static ClassLoader cl;
-
     @BeforeClass
-    public static void setup() throws MalformedURLException {
-        final File file = new File(".");
-        final String currentPath = file.toURI().toURL().toString();
-        final URL classUrl = new URL(currentPath + "src/test/java");
-        final URL[] classUrls = { classUrl };
-        cl = new URLClassLoader(classUrls);
-        RuntimeConfig.getInstance().setClassLoader(cl);
-    }
+	public static void setup() throws MalformedURLException {
+		final File file = new File(".");
+		final String currentPath = file.toURI().toURL().toString();
+		final URL classUrl = new URL(currentPath + "src/test/java");
+		final URL[] classUrls = {classUrl};
+        ClassLoader cl = new URLClassLoader(classUrls);
+		RuntimeConfig.getInstance().setClassLoader(cl);
+		RuntimeConfig.getInstance().setTest(true);
+	}
 
-    /**
-     * Test loading a correct config file
-     *
-     * @throws ConfigReaderException
-     */
-    @Test()
-    public void testLoadingCorrectXMLConfigFile() throws ConfigReaderException {
-        // Given
-        XmlConfigReader reader = new XmlConfigReader();
+	/**
+	 * Test loading a correct config file
+	 *
+	 * @throws ConfigReaderException
+	 *             Exception if config file could not be found
+	 */
+    @Test
+	public void testLoadingCorrectXMLConfigFile() throws ConfigReaderException {
+		// Given
+		XmlConfigReader reader = new XmlConfigReader();
 
         // When
-        Map<String, Map<String, Rule>> result = reader.read(ConfigConstants.RULESET);
+        RuleSet result = reader.read(ConfigConstants.RULESET);
 
         // Then
-        assertFalse("No rules could be read", result.isEmpty());
-        for (Map.Entry<String, Map<String, Rule>> entry : result.entrySet()) {
+		assertFalse("No element rules could be read", result.getElementRules().isEmpty());
+        for (Map.Entry<String, Map<String, Rule>> entry : result.getElementRules().entrySet()) {
             assertFalse("Rules of type " + entry.getKey() + " could not be read.", entry.getValue().isEmpty());
-        }
-        assertTrue("ID of XorNamingConventionChecker was not loaded.", result.get("XorNamingConventionChecker").containsKey("XorCheckerId"));
+		}
+		assertFalse("No model rules could be read", result.getModelRules().isEmpty());
+		for (Map.Entry<String, Map<String, Rule>> entry : result.getModelRules().entrySet()) {
+			assertFalse("Rules of type " + entry.getKey() + " could not be read.", entry.getValue().isEmpty());
+		}
+	}
+
+    @Test
+	public void testLoadingCorrectXMLConfigFileWithExternalChecker() throws ConfigReaderException {
+		// Given
+		XmlConfigReader reader = new XmlConfigReader();
+
+		// When
+		RuleSet result = reader.read("ruleSetWithExternalChecker.xml");
+
+		// Then
+		assertEquals("Not all element rules could be read.", 5, result.getElementRules().size());
+		assertNotNull("External checker rule could not be loaded", result.getElementRules().get("TaskNamingConventionCheckerExtern"));
+		assertFalse("No model rules could be read", result.getModelRules().isEmpty());
     }
 
     /**
@@ -90,53 +107,57 @@ public class XmlConfigReaderTest {
     public void testLoadingNonExistingXMLConfigFile() throws ConfigReaderException {
         // Given
         XmlConfigReader reader = new XmlConfigReader();
-        Map<String, Map<String, Rule>> result = null;
 
-        // When
-        try {
-            result = reader.read("non-existing.xml");
-            assertTrue("Exception expected, but no one was thrown.", result != null);
-        } catch (ConfigReaderException e) {
-            // load DefaultRuleSet
-            result = reader.read("ruleSetDefault.xml");
+		// When
+		try {
+			RuleSet result = reader.read("non-existing.xml");
+            assertNotNull("Exception expected, but no one was thrown.", result);
+		} catch (ConfigReaderException e) {
+			// load DefaultRuleSet
+			RuleSet result = reader.read("ruleSetDefault.xml");
+			Map<String, Map<String, Rule>> elementRules = result.getElementRules();
 
-            // Default rules correct
-            assertTrue("False Default ruleSet ", result.get("JavaDelegateChecker").get("JavaDelegateChecker").isActive());
-            assertTrue("False Default ruleSet ", result.get("EmbeddedGroovyScriptChecker").get("EmbeddedGroovyScriptChecker").isActive());
-            assertFalse("False Default ruleSet ", result.get("VersioningChecker").get("VersioningChecker").isActive());
-            assertFalse("False Default ruleSet ", result.get("DmnTaskChecker").get("DmnTaskChecker").isActive());
-//            assertFalse("False Default ruleSet ", result.get("ProcessVariablesModelChecker").isActive());
-            assertFalse("False Default ruleSet ", result.get("ProcessVariablesNameConventionChecker").get("ProcessVariablesNameConventionChecker").isActive());
-            assertFalse("False Default ruleSet ", result.get("TaskNamingConventionChecker").get("TaskNamingConventionChecker").isActive());
-        }
-    }
+			// Default rules correct
+			assertTrue("False Default ruleSet ",
+					elementRules.get("JavaDelegateChecker").get("JavaDelegateChecker").isActive());
+			assertTrue("False Default ruleSet ",
+					elementRules.get("EmbeddedGroovyScriptChecker").get("EmbeddedGroovyScriptChecker").isActive());
+			assertFalse("False Default ruleSet ", elementRules.get("VersioningChecker").get("VersioningChecker").isActive());
+			assertFalse("False Default ruleSet ", elementRules.get("DmnTaskChecker").get("DmnTaskChecker").isActive());
+			assertFalse("False Default ruleSet ", elementRules.get("ProcessVariablesNameConventionChecker")
+					.get("ProcessVariablesNameConventionChecker").isActive());
+			assertFalse("False Default ruleSet ",
+					elementRules.get("TaskNamingConventionChecker").get("TaskNamingConventionChecker").isActive());
 
-    /**
-     * Test loading an incorrect config file (rulename empty)
-     *
-     *
-     */
-    @Test(expected = ConfigReaderException.class)
-    public void testLoadingIncorrectXMLNameConfigFile() throws ConfigReaderException {
-        // Given
-        XmlConfigReader reader = new XmlConfigReader();
+			Map<String, Map<String, Rule>> modelRules = result.getModelRules();
+			assertTrue("False Default ruleSet ", modelRules.get("DataFlowChecker").get("DataFlowChecker").isActive());
+			assertTrue("False Default ruleSet ", modelRules.get("ProcessVariablesModelChecker").get("ProcessVariablesModelChecker").isActive());
+		}
+	}
 
-        // When Then
-        reader.read("ruleSetIncorrectName.xml");
+	/**
+	 * Test loading an incorrect config file (rulename empty)
+	 *
+	 *
+	 */
+	@Test(expected = ConfigReaderException.class)
+	public void testLoadingIncorrectXMLNameConfigFile() throws ConfigReaderException {
+		// Given
+		XmlConfigReader reader = new XmlConfigReader();
 
-    }
+		// When Then
+		reader.read("ruleSetIncorrectName.xml");
+	}
 
-    /**
-     * Test loading an incorrect config file (no xml)
-     */
-    @Test(expected = ConfigReaderException.class)
-    public void testLoadingIncorrectXMLConfigFile() throws ConfigReaderException {
-        // Given
-        XmlConfigReader reader = new XmlConfigReader();
+	/**
+	 * Test loading an incorrect config file (no xml)
+	 */
+	@Test(expected = ConfigReaderException.class)
+	public void testLoadingIncorrectXMLConfigFile() throws ConfigReaderException {
+		// Given
+		XmlConfigReader reader = new XmlConfigReader();
 
-        // When Then
-        reader.read("ruleSetIncorrect.xml");
-
-    }
-
+		// When Then
+		reader.read("ruleSetIncorrect.xml");
+	}
 }
